@@ -62,6 +62,7 @@
 		"wikimedia/purtle": "1.0.7",
 		"wikimedia/relpath": "2.1.1",
 		"wikimedia/remex-html": "2.2.2",
+		"wikimedia/request-timeout": "1.0.0",
 		"wikimedia/running-stat": "1.2.1",
 		"wikimedia/scoped-callback": "3.0.0",
 		"wikimedia/services": "2.0.1",
